Bug 391304 - Falcon does not automaticly enable/choose kwallet PW Manager plugin in a Plasma Session
Summary: Falcon does not automaticly enable/choose kwallet PW Manager plugin in a Plas...
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-02 16:25 UTC by Achim Bohnet
Modified: 2019-09-27 12:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Achim Bohnet 2018-03-02 16:25:26 UTC
IMHO in a Plasma session the default Password manager should be kwallet, not
by default an unencrypted file.   Users should get secure setup without enabling plugin and changing the PW Manager.
 
Achim
Comment 1 David Rosca 2018-04-02 13:07:47 UTC
Git commit daf5be1dbae4849483b4b8b8ad677dbe20a71082 by David Rosca.
Committed on 02/04/2018 at 13:05.
Pushed by drosca into branch 'master'.

Enable KWallet passwords backend by default inside KDE session
FIXED-IN: 3.1.0

M  +4    -1    src/lib/autofill/passwordmanager.cpp
M  +5    -0    src/plugins/KDEFrameworksIntegration/kdeframeworksintegrationplugin.cpp

https://commits.kde.org/falkon/daf5be1dbae4849483b4b8b8ad677dbe20a71082
Comment 2 Achim Bohnet 2018-04-06 15:30:05 UTC
Thx a lot!

Achim
Comment 3 Wolfgang Bauer 2019-09-27 12:29:26 UTC
Now it's not possible to switch back to the standard storage in a KDE session though.
Falkon will *always* use KWallet on next start (on Plasma), even if you explicitly change the setting.