Enable KWallet passwords backend by default inside KDE session

BUG: 391304
FIXED-IN: 3.1.0